change module name